objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>AssignToProspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssignToProspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignToVendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssignToVendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>IF (assignToClient__c = TRUE, &quot;Client&quot;, 
IF (assignToEmployee__c = TRUE, &quot;Employee&quot;, 
IF (assignToProducer__c = TRUE, &quot;Producer&quot;, 
IF (assignToHost__c = TRUE, &quot;Host&quot;, 
IF (assignToCharity__c = TRUE, &quot;Charity&quot;, 
IF (assignToEmployeeIncentive__c = TRUE, &quot;Employee Incentive&quot;, 
IF (AssignToProspect__c = TRUE, &quot;Prospect&quot;, 
IF (AssignToVendor__c = TRUE, &quot;Vendor&quot;,&quot;&quot; ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <formula>IF (  Contact_for_Event__c &lt;&gt; &quot;&quot;,Contact_for_Event__r.FirstName &amp; &quot; &quot; &amp;  Contact_for_Event__r.LastName,  IF (Producer_Contact__c &lt;&gt; &quot;&quot;,  Producer_Contact__r.FirstName &amp; &quot; &quot; &amp; Producer_Contact__r.LastName,  IF (Contact__c &lt;&gt; &quot;&quot;,  Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName, &quot;Unassigned&quot;)))</formula>
        <label>Attendee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Use_of_Ticket__c</fullName>
        <label>Ticket Use Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Charities</fullName>
                </value>
                <value>
                    <fullName>Employee Incentive</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charity_Organization__c</fullName>
        <description>Formula retrieves the Organization Name for the Contact if that Contact is a Charity Contact</description>
        <formula>IF(
Contact__r.RecordType.DeveloperName = &apos;Charity_Contact&apos;,
Contact__r.Organization_Name__c, 
&apos;&apos;)</formula>
        <label>Charity Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Number__c</fullName>
        <label>Client Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Producer_Name__c</fullName>
        <description>Shows the Client or Producer name if there are a designated Client or Producer. If not the ticket is denoted as being assigned internally.</description>
        <formula>IF( Client__c &lt;&gt; &quot;&quot;,  Client__r.Name, 
     IF( Producer_for_Event__c &lt;&gt; &quot;&quot;,  Producer_for_Event__r.Name,
         IF ( Contact__c &lt;&gt; &quot;&quot;, &quot;Internal&quot;, 
           IF(Prospect__c&lt;&gt;&quot;&quot;, Specific_Prospect_Contact__r.FirstName +Specific_Prospect_Contact__r.LastName ,
              IF(Vendor__c&lt;&gt;&quot;&quot;, Specific_Vendor_Contact__r.FirstName+Specific_Vendor_Contact__r.LastName,&quot;Unassigned&quot;)))))</formula>
        <label>Client/Producer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets (Client)</relationshipLabel>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specific Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Internal Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Charity Contact</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets (Internal Contact)</relationshipLabel>
        <relationshipName>Tickets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_for_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_to_Event_Starts__c</fullName>
        <description>calculate the number of days from today to Event Starts</description>
        <formula>(Ticket_Event__r.Event_Date__c -today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Event Starts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date_Time__c</fullName>
        <label>Event Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <label>Guest Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Non_taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Minute Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets (Producer Contact)</relationshipLabel>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Number__c</fullName>
        <label>Producer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_for_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer for Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Producer_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets (Prospect)</relationshipLabel>
        <relationshipName>Tickets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester_Call_Center__c</fullName>
        <label>Requester Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester (Old)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets (Requestor)</relationshipLabel>
        <relationshipName>Tickets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <label>Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Prospect_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specific Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Internal Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets (Specific Contact)</relationshipLabel>
        <relationshipName>Tickets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specific_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up all contact</description>
        <label>Specific Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor Contact</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tickets (Specific Vendor Contact)</relationshipLabel>
        <relationshipName>Tickets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Event__c</fullName>
        <label>Ticket Event</label>
        <referenceTo>Ticket_Event__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ticket_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket Grouping</label>
        <referenceTo>Ticket_Grouping__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Price__c</fullName>
        <label>Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box Seats</fullName>
                </value>
                <value>
                    <fullName>Terrace Seats</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unused_Ticket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to calculate Unused Tickets of each category for the Event.</description>
        <label>Unused Ticket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Made_Within_48_hours__c</fullName>
        <formula>TEXT(ROUND(Ticket_Event__r.Event_Start_Date_Time__c - NOW(),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Made Within 48 hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_for_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User for Event</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets (Vendor)</relationshipLabel>
        <relationshipName>Tickets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>assignToCharity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignToCharity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assignToClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignToClient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assignToEmployeeIncentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignToEmployeeIncentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assignToEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignToEmployee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assignToHost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignToHost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>assignToProducer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>assignToProducer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSelected</label>
        <type>Checkbox</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All_UpcomingTickets</fullName>
        <columns>Event_Start_Date_Time__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Time__c</columns>
        <columns>Ticket_Event__c</columns>
        <columns>Requestor_contact__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Upcoming Tickets</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Charity_Ticket_Use_Contact_Required</fullName>
        <active>true</active>
        <description>For Charity Tickets a Charity Contact is Required.</description>
        <errorConditionFormula>(AND(ISPICKVAL(Business_Use_of_Ticket__c , &apos;Charities&apos;), 
ISBLANK(Contact__c))) 
|| 
(AND(ISPICKVAL(Business_Use_of_Ticket__c , &apos;Charities&apos;), 
NOT(ISBLANK(Contact__c)), 
Contact__r.RecordType.DeveloperName&lt;&gt;&apos;Charity_Contact&apos;))</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>For Charity tickets, a Charity Specific Contact MUST be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Event_Time</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!(ISBLANK (Event_Time__c)), NOT(REGEX( Event_Time__c ,
&quot;(\\d([0-1]|[1-9]):\\d([0-1]|[1-60]) (AM|am|PM|pm))&quot;)))</errorConditionFormula>
        <errorDisplayField>Event_Time__c</errorDisplayField>
        <errorMessage>Please enter validate Event time! for example: 11:23 AM</errorMessage>
    </validationRules>
</CustomObject>